# core

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  TRADEMARKS.md
.github/workflows/: desktop.yml  release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.mjs  stage-updater-assets.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css  views.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: daemon.ts
config/: horizen-testnet.example.json  horizen-testnet.json
crates/osciris-chain/: Cargo.toml
crates/osciris-chain/src/: lib.rs
crates/osciris-cli/: Cargo.toml
crates/osciris-cli/src/: main.rs
crates/osciris-core/: Cargo.toml
crates/osciris-core/src/: lib.rs
crates/osciris-daemon/: Cargo.toml  NOTICE
crates/osciris-daemon/src/: lib.rs  main.rs
crates/osciris-node/: Cargo.toml
crates/osciris-node/src/: lib.rs  network.rs  status.rs  store.rs
crates/osciris-verifier/: Cargo.toml
crates/osciris-verifier/src/: lib.rs
docs/: aws_relay_setup.md  beta_collaboration.md  desktop_node_architecture.md  desktop_product_workspace.md  desktop_updates.md  developer_beta_launch_copy.md  developer_beta_release_checklist.md  hardware_requirements.md  horizen_mvp_integration.md  multi_host_testnet_join_guide.md  mvp_operator_runbook.md  relay_node_setup.md  release_workflow_handoff.md
docs/milestones/: README.md  provider_local_inference_roundtrip.md
scripts/: bootstrap_beta_collaboration.ps1  bootstrap_beta_collaboration.sh  generate_desktop_update_manifest.mjs  package_beta_release.sh  run_beta_release_flow.sh  verify_beta_release_surface.py
tasks/: lessons.md  todo.md
