[workspace]
members = [
  "crates/osciris-chain",
  "crates/osciris-cli",
  "crates/osciris-core",
  "crates/osciris-node",
  "crates/osciris-verifier",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["OSCIRIS Labs"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.1"
flate2 = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shell-words = "1.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tar = "0.4"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
walkdir = "2.5"
