[package]
name = "osciris-chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
osciris-core = { path = "../osciris-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
