[package]
name = "osciris-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
flate2.workspace = true
osciris-core = { path = "../osciris-core" }
osciris-node = { path = "../osciris-node" }
osciris-verifier = { path = "../osciris-verifier" }
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
