[package]
name = "osciris-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "osciris-node"
path = "src/main.rs"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
osciris-chain = { path = "../osciris-chain" }
osciris-core = { path = "../osciris-core" }
osciris-node = { path = "../osciris-node" }
osciris-verifier = { path = "../osciris-verifier" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
