[package]
name = "osciris-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
futures.workspace = true
libp2p.workspace = true
osciris-core = { path = "../osciris-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
sqlx.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
