[package]
name = "osciris-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
osciris-core = { path = "../osciris-core" }
osciris-node = { path = "../osciris-node" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
