[package]
name = "osciris-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
osciris-chain = { path = "../osciris-chain" }
osciris-core = { path = "../osciris-core" }
osciris-node = { path = "../osciris-node" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
